--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,15 +4,14 @@ body {
 }
 
 .page-footer {
-  // outline: 2px solid rgb(226, 25, 216);
-  background-color: $main_grey_color;
+  // background-color: $main_grey_color;
 }
 
 .page-footer__contacts {
   // contacts
-  // position: relative;
+  // background-color: $main_grey_color;
 }
 
 .page-footer__links {
-  // logo-link
+  // background-color: $main_grey_color;
 }
