--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -4,16 +4,14 @@ body {
 }
 
 .advantages {
-  // display: block;
-  padding-top: 10px;
+  padding-top: 7px;
   padding-bottom: 10px;
-
-  // border-bottom: 1px solid transparent;
 }
 
 .advantages__title {
-  margin-bottom: 20px;
-  // line-height: 60px;
+  margin-bottom: 18px;
+
+  line-height: 60px;
 
   @include font(36px, 400, $title_font_color);
 
@@ -27,10 +25,13 @@ body {
 }
 
 .advantages__list {
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   @media (min-width: $tablet-breakpoint) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
   }
 
   // @media (min-width: $desktop-breakpoint) {
@@ -39,30 +40,11 @@ body {
 }
 
 .advantages__item {
-  position: relative;
-
-  margin-bottom: 20px;
-  padding: 10px 10px 10px 80px;
-  // line-height: 18px;
-
-  @include font_arial(14px, 400, $text_font_color);
-
-  @media (min-width: $tablet-breakpoint) {
-    flex-basis: 350px;
-    padding: 100px 20px 10px 20px;
-
-    font-size: 16px;
-    // line-height: 24px;
-
-    @media (min-width: $desktop-breakpoint) {
-      flex-basis: 300px;
-    }
-  }
+  margin-bottom: 24px;
 }
 
 .advantages__icon {
   position: relative;
-
   // content: "1";
   // line-height: 281px;
   // @include font(281px, 400, $main_grey_color);
@@ -74,11 +56,9 @@ body {
     left: 0;
     z-index: -2;
 
-    display: inline-block;
+    display: block;
     width: 60px;
     height: 60px;
-
-    vertical-align: middle;
 
     background-color: $main_green_color;
 
@@ -86,18 +66,17 @@ body {
       width: 80px;
       height: 80px;
     }
-
-    // @media (min-width: $desktop-breakpoint) {
-    //
-    // }
   }
 
   &::after {
     content: "";
     position: absolute;
-    top: 15px;
-    left: 15px;
+    top: 0;
+    left: 0;
     z-index: -2;
+
+    width: 60px;
+    height: 60px;
 
     background-repeat: no-repeat;
     background-position: center center;
@@ -105,58 +84,43 @@ body {
 }
 
 .advantages__icon--leaf::after {
-  width: 26px;
-  height: 29px;
-  // background-size: 100%;
-
   background-image: url("../img/advantage-leaf@1x.png");
 
   @media (min-width: $tablet-breakpoint) {
-    content: "1";
-    // line-height: 281px;
-
-    @include font(281px, 400, $main_grey_color);
+    //
   }
 }
 
 .advantages__icon--powder::after {
-  width: 31px;
-  height: 31px;
-
   background-image: url("../img/advantage-powder@1x.png");
-
-  @media (min-width: $tablet-breakpoint) {
-    content: "2";
-    // line-height: 281px;
-
-    @include font(281px, 400, $main_grey_color);
-  }
 }
 
 .advantages__icon--dining::after {
-  width: 23px;
-  height: 30px;
-
   background-image: url("../img/advantage-dining@1x.png");
-
-  @media (min-width: $tablet-breakpoint) {
-    content: "3";
-    // line-height: 281px;
-
-    @include font(281px, 400, $main_grey_color);
-  }
 }
 
 .advantages__icon--clock::after {
-  width: 26px;
-  height: 31px;
-
   background-image: url("../img/advantage-clock@1x.png");
+}
+
+.advantages__text {
+  padding-top: 2px;
+  // padding-bottom: 5px;
+  padding-left: 80px;
+
+  line-height: 18px;
+
+  @include font_arial(14px, 400, $text_font_color);
 
   @media (min-width: $tablet-breakpoint) {
-    content: "4";
-    // line-height: 281px;
+    flex-basis: 350px;
+    padding: 100px 20px 10px 20px;
 
-    @include font(281px, 400, $main_grey_color);
+    font-size: 16px;
+    line-height: 24px;
+
+    @media (min-width: $desktop-breakpoint) {
+      flex-basis: 300px;
+    }
   }
 }
