--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -6,6 +6,7 @@ body {
 .banner {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   width: 280px;
   height: 289px;
