--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -4,7 +4,6 @@ body {
 }
 
 .example {
-  // display: block;
   background-color: $main_grey_color;
 
   // @media (min-width: $tablet-breakpoint) {
@@ -13,39 +12,28 @@ body {
 
   @media (min-width: $desktop-breakpoint) {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
 .example__text-wrapper {
-  flex-basis: 50%;
-  // // TODO убрать обводку
-
-  outline: 1px solid rgb(24, 106, 228);
-  //
+  // flex-basis: 50%;
+  margin-bottom: 31px;
 }
 
 .example__keypoints {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-
-  // @media (min-width: $tablet-breakpoint) {
   //
-  // }
-
-  @media (min-width: $desktop-breakpoint) {
-    // width: 300px;
-  }
 }
 
 .example__title {
-  // display: block;
-  // line-height: 60px;
+  margin-bottom: 23px;
+  padding-top: 19px;
+
+  line-height: 60px;
+
   @include font(36px, 400, $title_font_color);
 
   @media (min-width: $tablet-breakpoint) {
-    // line-height: 60px;
     font-size: 60px;
   }
 
@@ -55,7 +43,9 @@ body {
 }
 
 .example__description {
-  // display: block;
+  margin-bottom: 15px;
+  padding-right: 2px;
+
   line-height: 18px;
 
   @include font_arial(14px, 400, $text_font_color);
@@ -71,8 +61,5 @@ body {
 }
 
 .example__slider {
-  // slider
-  // display: block;
-  // // TODO убрать обводку
-  outline: 1px solid rgb(24, 106, 228);
+  // margin-bottom: 79px;
 }
