--- a/source/sass/blocks/footer-links.scss
+++ b/source/sass/blocks/footer-links.scss
@@ -7,17 +7,16 @@ body {
 .footer-links {
   display: flex;
   flex-wrap: wrap;
-  // flex-direction: column;
-  // align-content: center;
-  // justify-content: center;
-  // align-items: center;
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+
+  background-color: $main_grey_color;
 }
 
 .footer-links__item {
   display: flex;
   flex-basis: 100%;
-  // flex-direction: column;
-  // align-items: center;
+  flex-wrap: wrap;
 
   border-bottom: 1px solid #cdcdcd;
 
