--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -5,7 +5,11 @@ body {
 
 .footer-logo {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  padding: 29px 10px 31px 10px;
+  // padding-top: 30px;
+  // padding-bottom: 30px;
 
   @media (min-width: $tablet-breakpoint) {
     justify-content: flex-start;
