--- a/source/sass/blocks/products-proposal.scss
+++ b/source/sass/blocks/products-proposal.scss
@@ -7,6 +7,7 @@ body {
 .products-proposal {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   // align-items: center;
   padding: 25px 0 25px 0;
 
