--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -3,14 +3,20 @@ body {
   // background-color: #3df87b;
 }
 
+
+img {
+  // TODO убрать outline
+  outline: 1px solid brown;
+}
+
 .wrapper {
   width: $mobile-wrapper;
   margin: 0 auto;
   padding-right: $mobile-padding;
   padding-left: $mobile-padding;
-  // TODO убрать обводку wrapper
+  // TODO убрать outline
 
-  outline: 2px solid rgb(228, 24, 24);
+  outline: 1px solid blue;
 
   @media (min-width: $tablet-breakpoint) {
     width: $tablet-wrapper;
@@ -43,8 +49,9 @@ body {
   color: $color;
 }
 
+// TODO переделать в псевдоэлемент для карточек товара
 .wrapper--product-cards {
-  @media (max-width: $tablet-breakpoint) {
+  @media (max-width: $mobile-width-only) {
     padding-right: 0;
     padding-left: 0;
   }
@@ -65,4 +72,21 @@ body {
 
   clip: rect(0, 0, 0, 0);
   clip-path: inset(50%);
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
 }
