--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,12 +1,14 @@
 // checking sass
 body {
-  // background-color: #f8823d;
   min-width: 320px;
+
+  // background-color: #f8823d;
 }
 
 // 320 mobile
 $mobile-wrapper: 320px;
 $mobile-padding: 20px;
+$mobile-width-only: 767;
 
 // 768 tablet
 $tablet-breakpoint: 768px;
@@ -15,6 +17,7 @@ $tablet-padding: 30px;
 
 // 1300 desktop
 $desktop-breakpoint: 1300px;
+
 // $desktop-wrapper: 1440px;
 $desktop-wrapper: 1300px;
 $desktop-padding: 40px;
@@ -72,7 +75,7 @@ $radio_border_color_hvr: #bababa;
 // header
 $menu_icon_color: #222222;
 // footer
-// $footer_icon_color: #666666;
+$footer_icon_color: #666666;
 $footer_icon_color_hvr: #68b738;
 
 
